--- a/benchmark/matmul/makefile
+++ b/benchmark/matmul/makefile
@@ -21,7 +21,11 @@ CUDA_SRCS=matmul.cu
 CUDA_OBJS=cuobj/matmul.o
 CUDA_TARGET=bin/matmul_cu
 
-all: bin_dir obj_dir cuobj_dir C_target CUDA_target
+NPU_SRCS=cim.cpp
+NPU_OBJS=obj/cim.o
+NPU_TARGET=bin/cim
+
+all: bin_dir obj_dir cuobj_dir C_target CUDA_target NPU_target
 
 # C language target
 C_target: $(C_OBJS)
@@ -30,6 +34,10 @@ C_target: $(C_OBJS)
 # CUDA language target
 CUDA_target: $(CUDA_OBJS)
 	$(NVCC) -L$(SIMULATOR_ROOT)/gpgpu-sim/lib/$(GPGPUSIM_CONFIG) --cudart shared $(CUDA_OBJS) -o $(CUDA_TARGET)
+
+# NPU language target
+NPU_target: $(NPU_OBJS)
+	$(CC) $(NPU_OBJS) $(INTERCHIPLET_C_LIB) -o $(NPU_TARGET)
 
 # Rule for C object
 obj/%.o: %.cpp
@@ -51,6 +59,8 @@ obj_dir:
 cuobj_dir:
 	mkdir -p cuobj
 
+run:
+	../../interchiplet/bin/interchiplet ./matmul.yml 
 # Clean generated files.
 clean:
 	rm -rf bench.txt delayInfo.txt buffer* message_record.txt
