--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "MNSIMChiplet/MNSIM"]
 	path = MNSIMChiplet/MNSIM
 	url = https://github.com/thu-nics/MNSIM-2.0.git
+[submodule "benchmark/MLP_mesh/json"]
+    path = benchmark/MLP_mesh/json
+    url = https://github.com/nlohmann/json.git
